--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,9 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           pip install -r requirements.txt -r requirements-test.txt
-          pip install anyio==3.7.1  # Fijar versión compatible
+          pip install anyio==3.7.1  # Evitar errores con start_blocking_portal
 
-      - name: Check if data.csv exists
+      - name: Ensure data directory and dummy data
         run: |
           mkdir -p data
           if [ ! -f data/data.csv ]; then
@@ -43,6 +43,8 @@ jobs:
           uvicorn challenge.api:app --host 0.0.0.0 --port 8000 &
 
       - name: Run tests
+        env:
+          PYTHONPATH: ${{ github.workspace }}
         run: |
           source .venv/bin/activate
-          pytest --cov=app tests/
+          pytest --cov=challenge tests/
