Absolut path for CI fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           python -m venv .venv
           source .venv/bin/activate
+          pip install --upgrade pip
           pip install -r requirements.txt -r requirements-test.txt
           pip install anyio==3.7.1  # Evitar errores con start_blocking_portal
 
@@ -36,11 +37,17 @@ jobs:
             echo "OPERA,TIPOVUELO,MES,delay" > data/data.csv
             echo "Aerolineas Argentinas,N,3,0" >> data/data.csv
           fi
+          ls -l data/  # Verificar si data.csv está presente
 
       - name: Start API in background
         run: |
           source .venv/bin/activate
           uvicorn challenge.api:app --host 0.0.0.0 --port 8000 &
+
+      - name: Wait for API to be ready
+        run: |
+          echo "Waiting for API to be ready..."
+          sleep 5  # Da tiempo al servidor para inicializar
 
       - name: Run tests
         env:
